# anyrun-plugins

./: .gitignore  Cargo.toml  DEVNOTES.md  README.md  default.nix  flake.nix  result  shell.nix  test.nix
.config/: hakari.toml
Browser/bookmarks/: Cargo.toml
Browser/bookmarks/src/: lib.rs
Browser/br_common/: Cargo.toml
Browser/util/: Cargo.toml
Browser/util/src/: lib.rs
Browser/webapps/: Cargo.toml
Browser/webapps/src/: lib.rs
Browser/webpages/: Cargo.toml
Browser/webpages/src/: lib.rs
Browser/websearch/: Cargo.toml
Browser/websearch/src/: lib.rs
applications/: Cargo.toml
applications/src/: lib.rs  util.rs
bookmarks/: Cargo.toml
bookmarks/src/: lib.rs
browser/src/: lib.rs  util.rs
common/src/: lib.rs
crates/applications/: Cargo.toml
crates/applications/src/: lib.rs  util.rs
crates/bookmarks/: Cargo.toml
crates/bookmarks/src/: firefox.rs  lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  types.rs
crates/kidex/: Cargo.toml
crates/kidex/src/: lib.rs
crates/powermenu/: Cargo.toml
crates/powermenu/src/: lib.rs
crates/rink/: Cargo.toml
crates/rink/src/: lib.rs
crates/shell/: Cargo.toml
crates/shell/src/: lib.rs
crates/webpages/: Cargo.toml
crates/webpages/src/: lib.rs
crates/websearch/: Cargo.toml
crates/websearch/src/: firefox.rs  lib.rs
crates/workspace-hack/: Cargo.toml
kidex/src/: lib.rs  util.rs
powermenu/: Cargo.toml
powermenu/src/: lib.rs
rink/src/: lib.rs
shell/src/: lib.rs
webpages/: Cargo.toml
webpages/src/: lib.rs
websearch/src/: lib.rs
