[package]
name = "applications"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.3"
anyrun-plugin = { git = "https://github.com/Kirottu/anyrun" }
common = { version = "0.1.0", path = "../common" }
serde = { version = "1.0.210", features = ["derive"] }
freedesktop-desktop-entry = "=0.7.5"
fuzzy-matcher = "0.3.7"
ron = "0.8.1"
sublime_fuzzy = "0.7.0"

