[package]
name = "bookmarks"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11.3"
anyrun-plugin = { git = "https://github.com/Kirottu/anyrun" }
common = { version = "0.1.0", path = "../common" }
ron = "0.8.1"
serde = { version = "1.0.210", features = ["derive"] }
