[package]
name = "powermenu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyrun-plugin = { git = "https://github.com/Kirottu/anyrun" }
abi_stable = "0.11.1"
ron = "0.8.1"
common = { version = "0.1.0", path = "../common" }
serde = { version = "1.0.210", features = ["derive"] }
fuzzy-matcher = "0.3.7"
