[package]
name = "util"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.3.9"
ron = "0.8.1"
rusqlite = "0.32.1"
anyrun-plugin = { git = "https://github.com/Kirottu/anyrun" }
abi_stable = "0.11.1"
serde = { version = "1.0.209", features = ["derive"] }
fuzzy-matcher = "0.3.7"
common = {path = "../../common"}