[package]
name = "webapps"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [
    "cdylib",
] # Required to build a dynamic library that can be loaded by anyrun

[dependencies]
anyrun-plugin = { git = "https://github.com/Kirottu/anyrun" }
abi_stable = "0.11.1"
serde = { version = "1.0.209", features = ["derive"] }
ron = "0.8.1"
br_common = { path = "../br_common" }
common = { path = "../../common" }
fuzzy-matcher = "0.3.7"
# Any other dependencies you may have
