[package]
name = "applications"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
abi_stable = "0.11.3"
anyrun-plugin = { git = "https://github.com/Kirottu/anyrun" }
common = { version = "0.1.0", path = "../common" }
serde = { version = "1.0.210", features = ["derive"] }
freedesktop-desktop-entry = "=0.7.5"
fuzzy-matcher = "0.3.7"
workspace-hack = { version = "0.1", path = "../workspace-hack" }
