[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
abi_stable = "0.11.3"
anyrun-plugin = { git = "https://github.com/Kirottu/anyrun" }
regex = "1.11.1"
ron = "0.8.1"
rusqlite = "0.32.1"
serde = { version = "1.0.210", features = ["derive"] }
lz4_flex = "0.11.3"
serde_json = "1.0.133"
workspace-hack = { version = "0.1", path = "../workspace-hack" }
