[package]
name = "rink"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyrun-plugin = { git = "https://github.com/Kirottu/anyrun" }
abi_stable = "0.11.1"
serde = { version = "1.0.152", features = ["derive"] }
rink-core = "0.6"
ron = "0.8"
reqwest = { version = "0.11.13", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
