[package]
name = "shell"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyrun-plugin = { git = "https://github.com/Kirottu/anyrun" }
abi_stable = "0.11.1"
serde = "1.0.209"
ron = "0.8.1"
workspace-hack = { version = "0.1", path = "../workspace-hack" }
common = { version = "0.1.0", path = "../common" }
